Created the Customers application.
* Moved the signup to customers app.

--- a/restaurants/templates/base.html
+++ b/restaurants/templates/base.html
@@ -60,7 +60,7 @@
               <a class="nav-link active" aria-current="page" href="#">Logout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/signup"
+              <a class="nav-link active" aria-current="page" href="user/signup"
                 >Signup</a
               >
             </li>
