--- a/restaurants/templates/header.html
+++ b/restaurants/templates/header.html
@@ -45,12 +45,20 @@
           <a class="nav-link active" aria-current="page" href="#">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="user/signup"
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'signup' %}"
             >Signup</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Login</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'login' %}"
+            >Login</a
+          >
         </li>
         <li class="nav-item dropdown">
           <a
