--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -2,6 +2,7 @@
 <div class="container-fluid mt-3">
   <div class="row">
     <div class="col-lg-2">
+      <h3>Cuisines</h3>
       <ul class="list-group">
         <a class="list-group-item list-group-item-action" href="/">All Items</a>
         {% for category in categories %}
