--- a/restaurants/templates/header.html
+++ b/restaurants/templates/header.html
@@ -41,9 +41,20 @@
       </ul>
 
       <ul class="navbar-nav d-flex">
+        {% if request.user.is_authenticated%}
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Logout</a>
+          <a class="nav-link active" aria-current="page" href="#">Orders</a>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'logout' %}"
+            >Logout</a
+          >
+        </li>
+        {% else %}
+
         <li class="nav-item">
           <a
             class="nav-link active"
@@ -52,6 +63,7 @@
             >Signup</a
           >
         </li>
+
         <li class="nav-item">
           <a
             class="nav-link active"
@@ -60,6 +72,13 @@
             >Login</a
           >
         </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'cart' %}"
+            >Cart</a
+          >
+        </li>
+
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
