--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block content %} {% load cart %}
 <div class="container-fluid mt-3">
   <div class="row">
     <div class="col-lg-2">
@@ -15,18 +15,51 @@
       </ul>
     </div>
 
-    <div id="items" class="col-lg-10">
+    <div id="items" class="col-lg-8">
       <div class="row mx-auto">
         {% for item in items%}
-        <div class="card mx-auto mb-3" style="width: 18rem">
+        <div class="card mx-auto mb-3" id="{{item.id}}" style="width: 18rem">
           <img src="{{item.photo.url}}" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">{{item.name}}</h5>
             <p class="card-text">
               {{item.description}}
-              <b>{{item.price}}$</b>
+              <b>{{item.price|currency}}</b>
             </p>
-            <a href="#" class="btn btn-outline-success btn-sm">Add to Cart</a>
+          </div>
+          <div class="card-footer p-0 row nu-gutters">
+            {% if item|is_in_cart:request.session.cart %}
+            <div class="row">
+              <form action="/#{{item.id}}" method="POST" class="col-2">
+                {% csrf_token %}
+                <input hidden type="text" name="item" value="{{item.id}}" />
+                <input hidden type="text" name="remove" value="True" />
+                <input type="submit" value="-" class="btn btn-outline-danger" />
+              </form>
+              <div class="text-center col">
+                <b>{{item|cart_count:request.session.cart}}</b> In Cart
+              </div>
+              <form action="/#{{item.id}}" method="POST" class="col-2">
+                {% csrf_token %}
+                <input hidden type="text" name="item" value="{{item.id}}" />
+                <input
+                  type="submit"
+                  value="+"
+                  class="btn btn-outline-success"
+                />
+              </form>
+            </div>
+            {% else %}
+            <form action="/#{{item.id}}" method="POST" class="btn-block">
+              {% csrf_token %}
+              <input hidden type="text" name="item" value="{{item.id}}" />
+              <input
+                type="submit"
+                class="float-right btn btn-outline-success form-control"
+                value="Add to Cart"
+              />
+            </form>
+            {% endif %}
           </div>
         </div>
         {% endfor %}
