--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -1,70 +1,35 @@
-{% extends 'base.html' %} {% block content %} {% load cart %}
+{% extends 'base.html' %} {% block content %}
 <div class="container-fluid mt-3">
   <div class="row">
     <div class="col-lg-2">
       <h3>Cuisines</h3>
       <ul class="list-group">
         <a class="list-group-item list-group-item-action" href="/">All Items</a>
-        {% for category in categories %}
+
+        {% if categories %} {% for category in categories %}
         <a
           class="list-group-item list-group-item-action"
           href="/?category={{category.id}}"
           >{{category.name}}</a
         >
+        {% endfor %} {% endif %}
+      </ul>
+
+      <h3 class="mt-5">Restaurants</h3>
+      <ul class="list-group">
+        <a class="list-group-item list-group-item-action" href="/"
+          >All Restaurants</a
+        >
+        {% for restaurant in restaurants %}
+        <a
+          class="list-group-item list-group-item-action"
+          href="/?restaurant={{restaurant.id}}"
+          >{{restaurant.name}}</a
+        >
         {% endfor %}
       </ul>
     </div>
-
-    <div id="items" class="col-lg-8">
-      <div class="row mx-auto">
-        {% for item in items%}
-        <div class="card mx-auto mb-3" id="{{item.id}}" style="width: 18rem">
-          <img src="{{item.photo.url}}" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">{{item.name}}</h5>
-            <p class="card-text">
-              {{item.description}}
-              <b>{{item.price|currency}}</b>
-            </p>
-          </div>
-          <div class="card-footer p-0 row nu-gutters">
-            {% if item|is_in_cart:request.session.cart %}
-            <div class="row">
-              <form action="/#{{item.id}}" method="POST" class="col-2">
-                {% csrf_token %}
-                <input hidden type="text" name="item" value="{{item.id}}" />
-                <input hidden type="text" name="remove" value="True" />
-                <input type="submit" value="-" class="btn btn-outline-danger" />
-              </form>
-              <div class="text-center col">
-                <b>{{item|cart_count:request.session.cart}}</b> In Cart
-              </div>
-              <form action="/#{{item.id}}" method="POST" class="col-2">
-                {% csrf_token %}
-                <input hidden type="text" name="item" value="{{item.id}}" />
-                <input
-                  type="submit"
-                  value="+"
-                  class="btn btn-outline-success"
-                />
-              </form>
-            </div>
-            {% else %}
-            <form action="/#{{item.id}}" method="POST" class="btn-block">
-              {% csrf_token %}
-              <input hidden type="text" name="item" value="{{item.id}}" />
-              <input
-                type="submit"
-                class="float-right btn btn-outline-success form-control"
-                value="Add to Cart"
-              />
-            </form>
-            {% endif %}
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-    </div>
+    {% include 'items.html' %}
   </div>
 </div>
 {% endblock content %}
