Worked on Orders Model.
* Implemented the order model and designed it's page.

--- a/restaurants/templates/header.html
+++ b/restaurants/templates/header.html
@@ -22,31 +22,25 @@
             >Restaurants</a
           >
         </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </li>
-          </ul>
-        </li>
       </ul>
 
       <ul class="navbar-nav d-flex">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'cart' %}"
+            >Cart
+            <span class="badge bg-success text-light"
+              >{{request.session.cart.keys|length}}</span
+            >
+          </a>
+        </li>
         {% if request.user.is_authenticated%}
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Orders</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'orders' %}"
+            >Orders</a
+          >
         </li>
         <li class="nav-item">
           <a
@@ -76,43 +70,7 @@
           >
         </li>
         {% endif %}
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'cart' %}"
-            >Cart</a
-          >
-        </li>
-
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Profile
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </li>
-          </ul>
-        </li>
       </ul>
-      {% comment %}
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-      {% endcomment %}
     </div>
   </div>
 </nav>
