--- a/restaurants/templates/cart.html
+++ b/restaurants/templates/cart.html
@@ -44,7 +44,74 @@
       </tfoot>
     </table>
     <div class="m-3 p-3">
-      <a href="" class="btn btn-outline-success col-lg-2 float-end">Checkout</a>
+      <a
+        href=""
+        data-bs-toggle="modal"
+        data-bs-target="#checkoutModal"
+        class="btn btn-outline-success col-lg-2 float-end"
+        >Checkout</a
+      >
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="checkoutModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Checkout Form</h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="m-2 p-2">
+          <form action="/checkout" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="address">Address</label>
+              <input
+                id="address"
+                class="form-control"
+                type="text"
+                name="address"
+              />
+            </div>
+            <div class="form-group mt-3">
+              <label for="contact">Contact</label>
+              <input
+                id="contact"
+                class="form-control"
+                type="text"
+                name="phone"
+              />
+            </div>
+            <input
+              hidden
+              id="price"
+              class="form-control"
+              type="text"
+              name="price"
+              value="{{items|total_amount:request.session.cart|currency}}"
+            />
+            <input
+              type="submit"
+              value="Checkout"
+              class="btn btn-sm btn-outline-success col-lg-3 mt-3 float-lg-end"
+            />
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
