--- a/restaurants/templates/header.html
+++ b/restaurants/templates/header.html
@@ -1,3 +1,4 @@
+{% load cart %}
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">DinerDash</a>
@@ -22,6 +23,18 @@
             >Restaurants</a
           >
         </li>
+
+        {% if request.user.groups.all.first|is_admin %}
+
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'restaurants' %}"
+            >Add Restaurants</a
+          >
+        </li>
+        {% endif %}
       </ul>
 
       <ul class="navbar-nav d-flex">
