--- a/restaurants/templates/header.html
+++ b/restaurants/templates/header.html
@@ -60,12 +60,25 @@
         {% endif %}
         {% if request.user.is_authenticated%}
         <li class="nav-item">
+
+          {% if request.user.groups.first|is_admin %}
+
           <a
             class="nav-link active"
             aria-current="page"
-            href="{% url 'orders' %}"
+            href="{% url 'orders_admin' %}"
             >Orders</a
           >
+          {% else %}
+          <a
+          class="nav-link active"
+          aria-current="page"
+          href="{% url 'orders_user' %}"
+          >Orders</a
+        >
+
+          {% endif %}
+
         </li>
         <li class="nav-item">
           <a
