--- a/restaurants/templates/restaurants/order_confirm_delete.html
+++ b/restaurants/templates/restaurants/order_confirm_delete.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-{% url 'orders' as list_all %}
+{% url 'orders_admin' as list_all %}
+
 
 <div class="container d-flex justify-content-center mt-5" style="width: 50%;">
     <div class="col mt-5 text-center">
