--- a/restaurants/templates/header.html
+++ b/restaurants/templates/header.html
@@ -77,8 +77,17 @@
           >Orders</a
         >
 
-          {% endif %}
+        {% endif %}
 
+        </li>
+        <li class="nav-item">
+
+          <a
+          class="nav-link active"
+          aria-current="page"
+          href="{% url 'category_create' %}"
+          >Add Categories</a
+        >
         </li>
         <li class="nav-item">
           <a
@@ -88,6 +97,8 @@
             >Logout</a
           >
         </li>
+
+
         {% else %}
 
         <li class="nav-item">
