--- a/restaurants/templates/base.html
+++ b/restaurants/templates/base.html
@@ -15,7 +15,9 @@
     />
   </head>
   <body>
-    {% include 'header.html' %} {% block content %} {% endblock content%}
+    {% include 'header.html' %}
+    {% include 'alerts.html' %}
+    {% block content %} {% endblock content%}
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
