--- a/restaurants/templates/restaurants/item_form.html
+++ b/restaurants/templates/restaurants/item_form.html
@@ -5,7 +5,7 @@
 
 <div class="container d-flex justify-content-center mt-5" style="width: 25%;">
     <div class="col mt-5">
-        <form action="" method="post">
+        <form action="" method="post"  enctype="multipart/form-data">
             {% csrf_token %}
             <table class="table">
                 {{form|crispy}}
