--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -56,6 +56,14 @@
                 </div>
               </div>
               {% else %}
+
+              {% if item|is_retired %}
+
+              <div class="row">
+                <small class="text-center">Item is out of Stock.</small>
+              </div>
+              {% else %}
+
               {% if item|is_in_cart:request.session.cart %}
               <div class="row">
                 <form action="/#{{item.id}}" method="POST" class="col-2">
@@ -84,6 +92,8 @@
                 />
               </form>
               {% endif %}
+              {% endif %}
+
               {% endif %}
             </div>
           </div>
