Separated admin panels on the basis of thier restaurants.

--- a/restaurants/templates/header.html
+++ b/restaurants/templates/header.html
@@ -97,6 +97,14 @@
             >Logout</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link disabled"
+            aria-current="page"
+            href="{% url 'logout' %}"
+            >{{request.user.email}}</a
+          >
+        </li>
 
 
         {% else %}
