--- a/restaurants/templates/restaurants/restaurant_form.html
+++ b/restaurants/templates/restaurants/restaurant_form.html
@@ -6,8 +6,12 @@
 <div class="container d-flex justify-content-center mt-5" style="width: 25%;">
     <div class="col mt-5">
         <form action="" method="post">
+
             {% csrf_token %}
             <table class="table">
+                <label>Owner*</label>
+                <input disabled type="text" name="owner" class="form-control" value="{{request.user.full_name}}" />
+
                 {{form|crispy}}
             </table>
             <div class="container d-flex justify-content-center" style="width: 10%;">
