--- a/restaurants/templates/restaurants/item_form.html
+++ b/restaurants/templates/restaurants/item_form.html
@@ -2,13 +2,21 @@
 
 {% block content %}
 {% load crispy_forms_filters %} {% load crispy_forms_tags %}
-
 <div class="container d-flex justify-content-center mt-5" style="width: 25%;">
     <div class="col mt-5">
         <form action="" method="post"  enctype="multipart/form-data">
             {% csrf_token %}
             <table class="table">
                 {{form|crispy}}
+                <label for="id_restaurant" class="form-label requiredField">
+                    Restaurant<span class="asteriskField">*</span> </label>
+                <select name="restaurant" class="select form-select" id="id_restaurant">
+                    {% for restaurant in request.user.restaurant_set.all %}
+                        <option value="{{restaurant.id}}">{{restaurant.name}}</option>
+                    {% endfor %}
+                 </select>
+                <label class="mt-3">Order Count*</label>
+                <input disabled type="number" name="order_count" class="form-control" value="0" />
             </table>
             <div class="container d-flex justify-content-center" style="width: 10%;">
                 <input type="submit" class="btn btn-primary btn-lg" value="Submit" style="margin-right: 30px; margin-top: 30px;">
