--- a/restaurants/templates/restaurants/item_list.html
+++ b/restaurants/templates/restaurants/item_list.html
@@ -9,12 +9,15 @@
 
 
 <div class="container d-flex mt-5" style="width: 70%;">
+
+
+
+    {% comment %} <div class="col text-center"><h1>No Items</h1></div> {% endcomment %}
     <div class="col">
         <h1 class="text-center">All Items</h1>
         <table class="table table-striped mt-5 table-hover">
             <thead>
                 <tr>
-                    {% comment %} <th class="text-center" scope="col"><i class="fa fa-file-photo-o" aria-hidden="true"></i></th> {% endcomment %}
                     <th class="text-center" scope="col">S#No</th>
                     <th class="text-center" scope="col">Picture</th>
                     <th class="text-center" scope="col">Name</th>
@@ -30,6 +33,7 @@
             <tbody>
 
                 {% for item in item_list %}
+                {% if item.restaurant|is_owner:request.user.full_name%}
                 <tr>
                     <td class="text-center">{{forloop.counter}}</td>
                     <td class="text-center"><img src="{{item.photo.url}}" alt="" class="rounded-circle"
@@ -47,6 +51,11 @@
                     <td><a href="{% url 'item_update' item.id %} ">Update</a></td>
                     <td><a href="{% url 'item_delete' item.id %}">Delete</a></td>
                 </tr>
+                {% else %}
+                <tr>
+                   <td colspan="12" class="text-center"> <b><h1>No items in your Restaurant.</h1></b> </td>
+                </tr>
+                {% endif %}
             {% endfor %}
 
             </tbody>
