Added authorizations on restaurant and items.

--- a/restaurants/templates/403.html
+++ b/restaurants/templates/403.html
@@ -4,6 +4,7 @@
   <div class="alert alert-danger mt-3" role="alert">
     You are not authorized to perform this action.
   </div>
+  <a href="{% url 'index' %}"><button class="btn btn-outline-dark">Go to Home Page.</button></a>
 </div>
 
 {% endblock content %}
