--- a/restaurants/templates/restaurants/item_list.html
+++ b/restaurants/templates/restaurants/item_list.html
@@ -61,7 +61,7 @@
                 </tr>
                 {% else %}
                 <tr>
-                   <td colspan="12" class="text-center"> <b><h1>No items in your Restaurant.</h1></b> </td>
+                   {% comment %} <td colspan="12" class="text-center"> <b><h1>No items in your Restaurant.</h1></b> </td> {% endcomment %}
                 </tr>
                 {% endif %}
             {% endfor %}
