--- a/restaurants/templates/admin_header.html
+++ b/restaurants/templates/admin_header.html
@@ -1,7 +1,7 @@
 {% load cart %}
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">DinerDash</a>
+    <a class="navbar-brand" href="/">Admin Dinner Dash</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -17,23 +17,46 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'cart' %}"
-            >Cart
-            <span class="badge bg-success text-light"
-              >{{request.session.cart.keys|length}}</span
-            >
-          </a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'restaurants' %}"
+            >Restaurants</a
+          >
         </li>
-      </ul>
-      <ul class="navbar-nav d-flex">
-        {% if request.user.is_authenticated%}
+
         <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'items' %}"
+            >Items</a
+          >
+        </li>
+        <li class="nav-item">
+
           <a
           class="nav-link active"
           aria-current="page"
-          href="{% url 'orders_user' %}"
-          >Orders</a
+          href="{% url 'category_create' %}"
+          >Add Categories</a
         >
+        </li>
+
+      </ul>
+
+      <ul class="navbar-nav d-flex">
+
+
+        {% if request.user.is_authenticated%}
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'orders_admin' %}"
+            >Orders</a
+          >
+
         </li>
 
         <li class="nav-item">
@@ -52,6 +75,8 @@
             >{{request.user.email}}</a
           >
         </li>
+
+
         {% else %}
 
         <li class="nav-item">
@@ -62,6 +87,7 @@
             >Signup</a
           >
         </li>
+
         <li class="nav-item">
           <a
             class="nav-link active"
@@ -75,4 +101,3 @@
     </div>
   </div>
 </nav>
-
