--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -102,7 +102,7 @@
            </div>
          </div>
          {% else %}
-         <div class="text-center mt-5"><b><h2>No items in your Restaurants</h2></b> </div>
+         {% comment %} <div class="text-center mt-5"><b><h2>No items in your Restaurants</h2></b> </div> {% endcomment %}
          {% endif %}
         {% endfor %}
       </div>
