--- a/restaurants/templates/restaurants/order_list.html
+++ b/restaurants/templates/restaurants/order_list.html
@@ -28,6 +28,7 @@
                 </tr>
             </thead>
             <tbody>
+                {% comment %} if order is from restaurant of logged in admin {% endcomment %}
 
                 {% for order in order_list %}
                 <tr>
